--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .hero-section-clip-path {
   clip-path: polygon(16% 0, 100% 0%, 100% 100%, 0 100%);
 }
+
+.description-section-bg {
+  background: linear-gradient(
+    90.18deg,
+    #1d1d1d 31.74%,
+    #1d1d1d 90.49%,
+    #1d1d1d 90.49%
+  );
+}
